# dictionary

./: .gitignore  LICENSE  pyproject.toml  readme.md  readme.rst  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/dictionary/: __init__.py  file_ops.py  main.py
tests/: test_dictionary.py
