# Based on https://github.com/mCodingLLC/SlapThatLikeButton-TestingStarterProject/blob/main/setup.cfg

[metadata]
name = dictionary
author = soupless
version = 0.0.1
description = A script that allows you to create a dictionary saved as a JSON file.
license = MIT
license_file = LICENSE

[options]
packages = dictionary
install_requires = 
    jellyfish>=0.9.0
python_requires = >=3.10.0
package_dir = =src

[options.extras_require]
testing =
    mypy>=0.942
    flake8>=3.10

[options.package_data]
dictionary = py.typed

[flake8]
max-line-length = 79
extend-ignore = E203