# Based on https://github.com/mCodingLLC/SlapThatLikeButton-TestingStarterProject/blob/main/setup.cfg

[metadata]
name = dictionary
author = soupless
version = 0.2.0
description = A package that allows you to create a dictionary saved as a JSON file.
license = MIT
license_files = LICENSE

[options]
packages = dictionary
install_requires = 
    jellyfish>=0.9.0
python_requires = >=3.8.0
package_dir = =src

[options.extras_require]
testing =
    mypy>=0.942
    flake8>=3.10
    pytest>=7.0.0
    pytest-cov>=2.0

[options.package_data]
dictionary = py.typed

[flake8]
max-line-length = 79
extend-ignore = E203
